# parsers

pip/poetry/: handler.go  poetry_test.go
pip/testdata/: main.py  pyproject.toml
pip/worker/: worker.go  worker_test.go
